Added files via upload

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<img src="images/26.png" alt="" style="border-radius: 80%"/>
 			</div>
 			<div class="banner-right">
-				<h1 style="font-size: x-large">ELENA MANEVSKA</h1>
+				<h1 style="font-size: x-large; color: lightslategray">ELENA MANEVSKA</h1>
 				<div class="border"></div>
-				<h2>Software Engineer</h2>
+				<h2 style="color:lightslategrey;">Software Engineer</h2>
 				<a target="_blank" href="http://manevska.github.io/Elena_Manevska_CV.pdf">Grab my résumé</a>
 			</div>
 			<div class="clearfix"></div>
@@ -109,7 +109,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--about-->
 <div class="about text-center" id="about">
 	<div class="container">
-		<h3>ABOUT ME</h3>
+		<h3 style="color: lightslategrey">ABOUT ME</h3>
 		<div class="strip text-center"><img src="images/about.png" alt=" "/></div>
 		<p>Hey ya fellas!</p><p> If you are here it means I wanna do business with ya. <br>And if I wanna do business with ya it means you are pretty awesome indeed. <br>So good for us.<br> Or if you are visiting by your own choice, without my self-promotion, then even better!<br> Anyway you can grab my CV above or stalk me on some social networks through some clicks below.<br> Hope you like what you see 😉 </p>
 		
@@ -127,7 +127,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <div class="contact about" id="contact">
 	<div class="container">
 		<div class="contact-info text-center">
-			<h3>CONTACT</h3>
+			<h3 style="color: white">CONTACT</h3>
 			<div class="strip text-center"><img src="images/con1.png" alt=" "/></div>
 		</div>
 		<div class="text-center nav-social" style="margin-top:50px !important">
