Added files via upload

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 		</br>
 		<div class="text-center" style="margin-top:50px !important">
-			<h4>Feel free to email me about work, cool projects and ideas or just to say hello!</h4> </br></br>
+			<h4 style="color: lightslategrey">Just email me if you got any cool ideas, sharing is caring.</h4> </br></br>
 			<h4 style="color:#FFFFFF;">96manevskaelena@gmail.com</h4>
 		</div>
 			
