--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="container">
 		<h3 style="color: lightslategrey">ABOUT ME</h3>
 		<div class="strip text-center"><img src="images/about.png" alt=" "/></div>
-		<p>Hey ya fellas!</p><p> If you are here it means I wanna do business with ya. <br>And if I wanna do business with ya it means you are pretty awesome indeed. <br>So good for us.<br> Or if you are visiting by your own choice, without my self-promotion, then even better!<br> Anyway you can grab my CV above or stalk me on some social networks through some clicks below.<br> Hope you like what you see 😉 </p>
+		<p>Hello and Welcome!</p><p>I am Elena, Computer Science and Engineering student majoring in Applied E-technologies.<br>Or in more informal words: young and focused technology enthusiast, pursuing a career in Software Development.<br>
+		You can find out more about my projects, arrangements and skillset by grabing my resume 🡩 and/or contact me through the social media channels 🡫. <br></p>
+		<p>I am open for internship or employment opportunities.</p>
 		
 		
 		
