--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
 		<h3 style="color: lightslategrey">ABOUT ME</h3>
 		<div class="strip text-center"><img src="images/about.png" alt=" "/></div>
 		<p>Hello and Welcome!</p><p>I am Elena, Computer Science and Engineering student majoring in Applied E-technologies.<br>Or in more informal words: young and focused technology enthusiast, pursuing a career in Software Development.<br>
-		You can find out more about my projects, arrangements and skillset by grabing my resume 🡩 and/or contact me through the social media channels 🡫. <br></p>
+		You can find out more about my projects, arrangements and skillset by <br>
+		grabing my resume 🡩 and/or contact me through the social media channels 🡫. <br></p>
 		<p>I am open for internship or employment opportunities.</p>
 		
 	</div>
