--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 					<li><a class="social-network" target="_blank" href="https://www.instagram.com/elena_manevska/"><i class="fa fa-instagram fa-fw"></i><span>Instagram</span></a></li>
 				</div>
 				<div class="col-xs-6">
-					<li><a class="social-network" target="_blank" href=#><i class="fa fa-linkedin fa-fw"></i><span>LinkedIn</span></a></li>
+					<li><a class="social-network" target="_blank" href="www.linkedin.com/in/elena-manevska"><i class="fa fa-linkedin fa-fw"></i><span>LinkedIn</span></a></li>
 					<li><a class="social-network" target="_blank" href="https://github.com/manevska"><i class="fa fa-github fa-fw"></i><span>GitHub</span></a></li>
 					<li><a class="social-network" target="_blank" href=#><i class="fa fa-pinterest fa-fw"></i><span>Pinterest</span></a></li>
 				</div>
