--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 		</div>
 		</br>
 		<div class="text-center" style="margin-top:50px !important">
-			<h4 style="color: lightslategrey">Just email me if you got any cool ideas, sharing is caring.</h4> </br></br>
+			<h4 style="color: lightslategrey">Feel free to e-mail me with any questions or proposals.</h4> </br></br>
 			<h4 style="color:#FFFFFF;">96manevskaelena@gmail.com</h4>
 		</div>
 			
